--- a/koaning-theme/templates/base.html
+++ b/koaning-theme/templates/base.html
@@ -11,7 +11,12 @@
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.1/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js">
-  <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
+  <script type="text/javascript"
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
   </script>
@@ -23,7 +28,11 @@
       <div class="col-md-12">
         <br>
     		<h1><a class="web_title" href="/">{{ SITENAME }}</a></h1>
-        <blockquote>Blog of a data scientist/developer</blockquote>
+        <blockquote>
+          <p class="pull-left">Blog of a data scientist/developer </p>
+          <p class="pull-right"><a href="https://twitter.com/fishnets88">twitter</a> <a href="https://nl.linkedin.com/in/vincentwarmerdam
+">keyword bingo</a></p>
+        </blockquote>
     		<br><br>
       </div>
     </div>
