--- a/koaning-theme/templates/index.html
+++ b/koaning-theme/templates/index.html
@@ -27,7 +27,7 @@
 <h1>Talks</h1><p> Here's some content for some talks that I've given in the past:</p>
 <footer id="footer">
 	<a data-toggle="collapse" href="#earl2015" aria-expanded="false" aria-controls="earl2015">
-		<u><h3 class="small">Spark Summit Meetup + EARL Boston 2015: SparkR</h3></u>
+		<u><h3 class="small">Spark Summit Meetup + BudapestBI + EARL Boston 2015: SparkR</h3></u>
 	</a>
 	<div class="collapse" id="earl2015">
 	  <div class="well">
