update with data

--- a/koaning-theme/templates/index.html
+++ b/koaning-theme/templates/index.html
@@ -32,10 +32,35 @@
 
 <br><br>
 
-<h1>Talks</h1><p> Here's some content for some talks that I've given in the past:</p>
+<h1>Talks</h1><p> Here's some content for some talks that I've given in the past: </p>
+
 <footer id="footer">
+	<a data-toggle="collapse" href="#pydata_ams2016" aria-expanded="false" aria-controls="pydata_ams2016">
+		<u><h3 class="talk_notes">PyData Amsterdam 2016: The Dutch Tape of Heroes: Bayes Rule</h3></u>
+	</a>
+	<div class="collapse" id="pydata_ams2016">
+	  <div class="well">
+	    <ul class="well">
+	    	<li><a href="/theme/notebooks/bayes.pdf">slides</a></li>
+    	</ul>
+    	<br>
+	  </div>
+	</div>
+
+	<a data-toggle="collapse" href="#pokemon_london" aria-expanded="false" aria-controls="pokemon_london">
+		<u><h3 class="talk_notes">PyData London 2016 Meetup: An Optimal Portfolio of Pokemon</h3></u>
+	</a>
+	<div class="collapse" id="pokemon_london">
+	  <div class="well">
+	    <ul class="well">
+	    	<li><a href="/theme/notebooks/pokemon.pdf">slides</a></li>
+    	</ul>
+    	<br>
+	  </div>
+	</div>
+
 	<a data-toggle="collapse" href="#earl2015" aria-expanded="false" aria-controls="earl2015">
-		<u><h3 class="small">Spark Summit Meetup + BudapestBI + EARL Boston 2015: SparkR</h3></u>
+		<u><h3 class="talk_notes">Spark Summit Meetup + BudapestBI + EARL Boston 2015: SparkR</h3></u>
 	</a>
 	<div class="collapse" id="earl2015">
 	  <div class="well">
@@ -47,7 +72,7 @@
 	</div>
 
 	<a data-toggle="collapse" href="#europython2015" aria-expanded="false" aria-controls="europython2015">
-		<u><h3 class="small">EuroPython 2015: Pyspark + Warcraft</h3></u>
+		<u><h3 class="talk_notes">EuroPython 2015: Pyspark + Warcraft</h3></u>
 	</a>
 	<div class="collapse" id="europython2015">
 	  <div class="well">
@@ -60,7 +85,7 @@
 	</div>
 
 	<a data-toggle="collapse" href="#open-rstudio-2015" aria-expanded="false" aria-controls="open-rstudio-2015">
-		<u><h3 class="small">Open Rstudio Session 2015</h3></u>
+		<u><h3 class="talk_notes">Open Rstudio Session 2015</h3></u>
 	</a>
 	<div class="collapse" id="open-rstudio-2015">
 	  <div class="well">
@@ -73,7 +98,7 @@
 	</div>
 
 	<a data-toggle="collapse" href="#open-pandas-2015" aria-expanded="false" aria-controls="open-pandas-2015">
-		<u><h3 class="small">Open Pandas Session 2015</h3></u>
+		<u><h3 class="talk_notes">Open Pandas Session 2015</h3></u>
 	</a>
 	<div class="collapse" id="open-pandas-2015">
 	  <div class="well">
@@ -88,7 +113,7 @@
 	</div>
 
 	<a data-toggle="collapse" href="#python-ams-meetup" aria-expanded="false" aria-controls="python-ams-meetup">
-		<u><h3 class="small">Python AMS Meetup 2015</h3></u>
+		<u><h3 class="talk_notes">Python AMS Meetup 2015</h3></u>
 	</a>
 	<div class="collapse" id="python-ams-meetup">
 	  <div class="well">
@@ -102,7 +127,7 @@
 	</div>
 
 	<a data-toggle="collapse" href="#pydata-berlin" aria-expanded="false" aria-controls="pydata-berlin">
-		<u><h3 class="small">PyData Berlin 2014</h3></u>
+		<u><h3 class="talk_notes">PyData Berlin 2014</h3></u>
 	</a>
 	<div class="collapse" id="pydata-berlin">
 	  <div class="well">
