--- a/koaning-theme/templates/base.html
+++ b/koaning-theme/templates/base.html
@@ -30,8 +30,9 @@
     		<h1><a class="web_title" href="/">{{ SITENAME }}</a></h1>
         <blockquote>
           <p class="pull-left">Blog of a data scientist/developer </p>
-          <p class="pull-right"><a href="https://twitter.com/fishnets88">twitter</a> <a href="https://nl.linkedin.com/in/vincentwarmerdam
-">keyword bingo</a></p>
+          <p class="pull-right"><a href="https://nl.linkedin.com/in/vincentwarmerdam"> &nbsp; kweyword bingo</a></p>
+          <p class="pull-right"><a href="https://twitter.com/fishnets88"> &nbsp; twitter</a></p>
+          <p class="pull-right"><a href="/feeds/rss.xml"> &nbsp; rss</a></p>
         </blockquote>
     		<br><br>
       </div>
