--- a/koaning-theme/templates/base.html
+++ b/koaning-theme/templates/base.html
@@ -8,13 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/theme/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.1/d3.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js">
-  <script type="text/javascript" async
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
-  <script type="text/javascript"
+  <script async type="text/javascript"
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
   <script type="text/x-mathjax-config">
@@ -30,7 +24,7 @@
     		<h1><a class="web_title" href="/">{{ SITENAME }}</a></h1>
         <blockquote>
           <p class="pull-left">Blog of a data scientist/developer </p>
-          <p class="pull-right"><a href="https://nl.linkedin.com/in/vincentwarmerdam"> &nbsp; kweyword bingo</a></p>
+          <p class="pull-right"><a href="https://nl.linkedin.com/in/vincentwarmerdam"> &nbsp; keyword bingo</a></p>
           <p class="pull-right"><a href="https://twitter.com/fishnets88"> &nbsp; twitter</a></p>
           <p class="pull-right"><a href="/feeds/rss.xml"> &nbsp; rss</a></p>
         </blockquote>
@@ -53,8 +47,7 @@
   	</div>
   </div>
   <!-- JavaScript -->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="/theme/js/jquery-2.1.3.min.js"></script>
   <script type="text/javascript">
   jQuery(document).ready(function($) {
   	$("div.collapseheader").click(function () {
