--- a/koaning-theme/templates/base.html
+++ b/koaning-theme/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>{% block title %}{{ SITENAME }}{% endblock %}</title>
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 	<meta name="description" content="{% block description %}Coding, scientific development, finance, data analysis, visualization, statistics, and machine learning{% endblock %}">
 	<meta name="author" content="{{ AUTHOR }}">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +37,7 @@
   			{% block content %}{% endblock %}
         <br>
   		</div>
-  	</div> 
+  	</div>
   </div>
 
   <div class="container">
@@ -60,7 +61,7 @@
   		});
   	});
   });
-  
+
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
