--- a/koaning-theme/templates/index.html
+++ b/koaning-theme/templates/index.html
@@ -32,6 +32,7 @@
 
 <h1>Talks</h1><p> Here's some content for some talks that I've given in the past: </p>
 
+<script src="/theme/js/bootstrap.min.js"></script>
 <footer id="footer">
 	<a data-toggle="collapse" href="#pydata_ams2016" aria-expanded="false" aria-controls="pydata_ams2016">
 		<u><h3 class="talk_notes">PyData London/Amsterdam 2016: The Duct Tape of Heroes: Bayes Rule</h3></u>
